<resources>
    <string name="app_name">NotesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_btn_room">ROOM</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Введите имя заметки!</string>
    <string name="start_btn_firebase">FIREBASE</string>
    <string name="hint_input_email">Введите email...</string>
    <string name="hint_input_password">Введите пароль...</string>
    <string name="start_btn_sign_in">SIGN IN</string>
    <string name="toast_invalid_data_to_sign_in">Введите email и пароль!</string>
    <string name="hint_add_text">Введите текст...</string>
    <string name="hint_add_name">Введите название заметки...</string>
</resources>